--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cleandersonlobo/react-mic": "^1.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "babel-preset-stage-1": "^6.24.1",
+    "mui-audio-player": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-mic": "^12.4.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sound": "^1.2.0",
     "styled-components": "^5.3.3",
     "swagger-ui-react": "^3.52.5",
     "web-vitals": "^1.1.2"
